--- a/cv-html-css/cv-jordan-reinaldo.css
+++ b/cv-html-css/cv-jordan-reinaldo.css
@@ -64,13 +64,11 @@ ul {
 
 .container {
     display: flex;
-    flex-flow: row;
+    flex-direction: row;
     justify-content: space-around;
     text-align: center;
     padding: 0;
-    margin: 0;
-    margin-top: 10px;
-    margin-bottom: 10px; /* Ajoutez de la marge à droite pour séparer les conteneurs */;
+    margin: 10px 0;
 }
 
 .art1 {
